# qtcreator-with-docker

./: CMakeLists.txt  Dockerfile  README.md  dr-cmake
